# locomotion_trainer

./: .gitignore  CHANGELOG.md  Makefile  README.md  RUNPOD_SETUP.md  TRAINING_GUIDE.md  ame2_architecture.py  dependencies.md  pyproject.toml  test_nccl.py  test_nccl_cvd.py  verify_distributed.py  watchdog.sh
ame2/: __init__.py  ame2_env_cfg.py  curriculums.py  delayed_joint_actions.py  mapping_data.py  rewards.py  robot_configs.py  terrains.py
ame2/agents/: __init__.py  rsl_rl_cfg.py
ame2/networks/: __init__.py  ame2_model.py  rslrl_wrapper.py
ame2_direct/: __init__.py  config.py  config_tron1.py  env.py  env_tron1.py  tron1_asset.py
docs/: training_walkthrough.md
logs/: mapping_net.pt
paper/AME2/: .gitignore  MinerU_markdown_202602251253175.md  full.md
scripts/: draw_architecture.py  play_direct.py  play_record.py  play_record_global.py  test_ame2.py  train_all.sh  train_ame2.py  train_ame2_direct.py  train_mapping.py  upload_wandb.py  wandb_live.py
wandb/: latest-run
wandb/run-20260318_180506-xi0bwno5/: run-xi0bwno5.wandb
wandb/run-20260318_180506-xi0bwno5/files/: requirements.txt  wandb-metadata.json
wandb/run-20260318_181057-hzv5vzlp/: run-hzv5vzlp.wandb
wandb/run-20260318_181057-hzv5vzlp/files/: wandb-metadata.json
wandb/run-20260318_181649-5d3sxo3q/files/: wandb-metadata.json
wandb/run-20260318_213935-60e6l733/: run-60e6l733.wandb
wandb/run-20260318_215552-el5kjdty/: run-el5kjdty.wandb
wandb/run-20260318_224133-42ydysp0/: run-42ydysp0.wandb
wandb/run-20260318_232133-3l59aqm4/: run-3l59aqm4.wandb
(+6 files in other folders)
